<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moebit.myfirstapplication.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView

        android:id="@+id/firstText"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_string"
        android:textSize="40sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="136dp"
        android:layout_height="68dp"
        android:text="@string/button_1_text"
        android:layout_marginEnd="48dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/firstText" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="136dp"
        android:layout_height="68dp"
        android:text="@string/button_2_text"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/firstText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/filetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outputfilename"
        android:ems="12"
        android:textSize="20sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/filenamehint"
        android:inputType="text"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/filetext"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/filename"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent">

        <CheckBox
            android:id="@+id/accelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_accelerometer"
            />
        <CheckBox
            android:id="@+id/ambienttemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_ambienttemp"
            />
        <CheckBox

            android:id="@+id/gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_gravity"
            />
        <CheckBox

            android:id="@+id/gyroscope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_gyroscope"
            />
        <CheckBox

            android:id="@+id/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_light"

            />
        <CheckBox

            android:id="@+id/linearAcceleration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_linearacceleration"

            />
        <CheckBox

            android:id="@+id/magneticField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_magneticfield"

            />

        <CheckBox

            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_pressure"

            />
        <CheckBox

            android:id="@+id/proximity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_proximity"

            />
        <CheckBox

            android:id="@+id/relativeHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_relativehumidity"

            />
        <CheckBox

            android:id="@+id/rotationVector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_rotationvector"

            />

    </LinearLayout>

















</android.support.constraint.ConstraintLayout>
